Cycles: MetalRT compilation errors on base M3 MacBook Pros with factory installed OS #114919

Closed
opened 2023-11-15 15:28:43 +01:00 by Michael Jones (Apple) · 0 comments

System Information
Operating system: macOS < 14.0
Graphics card: M3 GPUs

Blender Version
Broken: 4.0
Worked: N/A

The current MetalRT feature set relies on macOS 14.0, but the base M3 MacBook Pro factory install precedes this. #114296
enabled MetalRT as the default on M3 systems, based on the false assumption that the machines will never be running an OS older than 14.0. On a factory install, this will result in kernel compilation errors until a user updates their OS version.

Exact steps for others to reproduce the error
Get a base M3 MacBook Pro with factory installed OS, and try to render.

**System Information** Operating system: macOS < 14.0 Graphics card: M3 GPUs **Blender Version** Broken: 4.0 Worked: N/A The current MetalRT feature set relies on macOS 14.0, but the base M3 MacBook Pro factory install precedes this. #114296 enabled MetalRT as the default on M3 systems, based on the false assumption that the machines will never be running an OS older than 14.0. On a factory install, this will result in kernel compilation errors until a user updates their OS version. **Exact steps for others to reproduce the error** Get a base M3 MacBook Pro with factory installed OS, and try to render.
Michael Jones (Apple) added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-11-15 15:28:43 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Needs Triage
labels 2023-11-15 15:39:44 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114919
No description provided.